[gd_scene load_steps=3 format=3 uid="uid://bj1r3v23dethr"]

[ext_resource type="Theme" uid="uid://bfi5r52hbdwry" path="res://assets/theme.tres" id="1_agkj2"]
[ext_resource type="Script" uid="uid://b3f6tt12hxddc" path="res://scripts/game_over_screen.gd" id="1_bcvxg"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_bcvxg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 200.0
offset_right = 550.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_right = 62.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WinnerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player won!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_agkj2")
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_agkj2")
text = "Quit"
